@@ -18,8 +18,31 @@
 
 package de.gematik.demis.notificationgateway.common.utils;
 
+/*-
+ * #%L
+ * DEMIS Notification-Gateway
+ * %%
+ * Copyright (C) 2025 gematik GmbH
+ * %%
+ * Licensed under the EUPL, Version 1.2 or - as soon they will be approved by the
+ * European Commission – subsequent versions of the EUPL (the "Licence").
+ * You may not use this work except in compliance with the Licence.
+ *
+ * You find a copy of the Licence in the "Licence" file or at
+ * https://joinup.ec.europa.eu/collection/eupl/eupl-text-eupl-12
+ *
+ * Unless required by applicable law or agreed to in writing,
+ * software distributed under the Licence is distributed on an "AS IS" basis,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either expressed or implied.
+ * In case of changes by gematik find details in the "Readme" file.
+ *
+ * See the Licence for the specific language governing permissions and limitations under the Licence.
+ * #L%
+ */
+
 import java.net.InetSocketAddress;
 import java.net.Socket;
+import java.net.URI;
 import java.net.URL;
 import java.util.function.Predicate;
 import lombok.extern.slf4j.Slf4j;
@@ -32,7 +55,7 @@ public final class Reachability implements Predicate<String> {
 
   private static URL parseUrl(String url) {
     try {
-      return new URL(url);
+      return new URI(url).toURL();
     } catch (Exception e) {
       throw new IllegalArgumentException("Failed to parse URL: " + url, e);
     }
